[gd_scene load_steps=8 format=3 uid="uid://cgi8g0srvwpng"]

[ext_resource type="Script" path="res://Menus/pause_menu.gd" id="1_ii6yf"]
[ext_resource type="Theme" uid="uid://dkqrfy3kvl768" path="res://Menus/menu_theme.tres" id="1_spalh"]
[ext_resource type="Shader" path="res://Menus/pause_menu.gdshader" id="2_i42j4"]
[ext_resource type="PackedScene" uid="uid://0j6h00qv1oe8" path="res://Menus/options_menu.tscn" id="3_fupm4"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_toweq"]
noise_type = 0
seed = 4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lgxbl"]
generate_mipmaps = false
seamless = true
noise = SubResource("FastNoiseLite_toweq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ktrkk"]
shader = ExtResource("2_i42j4")
shader_parameter/octaves = 4
shader_parameter/starting_amplitude = 0.3
shader_parameter/starting_frequency = 1.0
shader_parameter/shift = 0.0
shader_parameter/velocity = Vector2(-0.03, 0.03)
shader_parameter/fog_color = Color(1, 0, 0, 1)
shader_parameter/noise = SubResource("NoiseTexture2D_lgxbl")

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ii6yf")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ktrkk")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_spalh")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 1
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
alignment = 0
script = null

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"HeaderLarge"
text = "Court Recess"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32
alignment = 1

[node name="Resume" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_vertical = 4
text = "Proceed"

[node name="Options" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_vertical = 4
text = "Options"

[node name="Quit" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_vertical = 4
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("3_fupm4")]
visible = false

[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="exit" from="OptionsMenu" to="." method="back_button"]
